Refactor player context to player